install-meta (0.0.51) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 10 Apr 2007 02:15:02 +0200

install-meta (0.0.50) unstable; urgency=low

  * add idesk to fluxbox.bm
  * change mouse pointer if over info icon
  * add Croatian Package 

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 09 Apr 2007 21:14:44 +0200

install-meta (0.0.49) unstable; urgency=low

  * next try for 64bit systems.

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 02 Apr 2007 09:21:28 +0200

install-meta (0.0.48) unstable; urgency=low

  * hopefully fixed 64bit problem 

 -- Horst Tritremmel <hjt@sidux.com>  Sun,  1 Apr 2007 22:17:51 +0200

install-meta (0.0.47) unstable; urgency=low

  [ Joaquim Boura ]
  * moving to xdg-menus

  [ Horst Tritremmel ]
  * add new metapackages Education, Games V3, Older Computer
  * add buttons expand and collapse all
  * singleclick instead of doubleclick for metapackage info
  * disable auto expand or collapse on mouse over
  * add MultiMedia-sound_studies.bm

  [ Stefan Lippers-Hollmann ]
  * fix *.desktop location.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Mar 2007 04:04:23 +0200

install-meta (0.0.46) unstable; urgency=low

  [ Chris Hildebrandt ]
  * meta-package tor/privoxy added, post-install configs to be added.
  
  [ Horst Tritremmel ]
  * all windows not resizeable.

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 22 Mar 2007 18:15:42 +0100

install-meta (0.0.45) unstable; urgency=low

  * add checkbutton for --yes option
  * games packages update

 -- Horst Tritremmel <hjt@sidux.com>  Sat, 10 Mar 2007 22:58:27 +0100

install-meta (0.0.44) unstable; urgency=low

  * add Office-Koffice.bm Office-Gnumeric_Abiword.bm

 -- Horst Tritremmel <hjt@sidux.com>  Wed,  7 Mar 2007 09:12:52 +0100

install-meta (0.0.43) unstable; urgency=low

  * compiler warning shut up
  * category text is now bold
  * bugfix for bold category text
  * new icons for category
  * source packages.d bugfix for info window